Normalise join result like we'd like to see it.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 Specify error handling at all levels.
 Joins/eager loads.  What syntax?  How do we prevent unexpected blowouts?
  - no auto subqueries, etc.  Thinner wrapper over SQL than AR.
+
+Do JOINs without all the "c1" "c2" "c3" business; assume (= check we can assume) that the primary table's columns come first, and secondary table's after; then just pick off the first n cols of a result tuple (where n is number of cols in primary table) and assign them to the primary table, and the remaining m (where m is no. of cols in secondary) to secondary.
